Fix contracts section on mobile

--- a/styles/coin.module.less
+++ b/styles/coin.module.less
@@ -179,7 +179,7 @@
   box-shadow: 1px 0 0 0 var(--cr-primary-border), 0 0px 0 0 var(--cr-primary-border), 1px 0px 0 0 var(--cr-primary-border), 1px 0 0 0 var(--cr-primary-border) inset, 0 0px 0 0 var(--cr-primary-border) inset !important;
 
   @media screen and (max-width: @screen-lg) {
-    width: 100%;
+    width: 100% !important;
   }
 }
 
